data/derived/comb/progs/unify/prog0557.ml.out
Characters 24-27:
  let _ = assoc (-1,'d', ["d", 1]);;
                          ^^^
Error: This expression has type string but an expression was expected of type
         char
